# django-quotector

./: .gitignore  .venv  README.md  django.startproject.quotector.sh
quotector/: .env  .env.example  =notes.txt  do.runserver  do.sh  manage.py  pyproject.toml  requirements.txt
quotector/my_django_templates/admin/: app_list.html  base.html  base_site.html
quotector/quoteapp/: admin.py  apps.py  forms.py  models.py  scrapy_content.py  urls.py  views.py
quotector/quoteapp/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_quote_quote.py
quotector/quoteapp/static/css/: admin.css
quotector/quoteapp/static/quoteapp/: main.css
quotector/quoteapp/templates/quoteapp/: about.html  author.html  base.html  index.html  quote.html  tag.html
quotector/quotector/: asgi.py  settings.py  urls.py  wsgi.py
quotector/users/: forms.py  models.py  signals.py  views.py
quotector/users/migrations/: 0001_initial.py
quotector/users/templates/users/: login.html  signup.html
