[tool.poetry]
name = "quotector"
version = "0.1.0"
description = ""
authors = ["Roy Bebru <roybebru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = {extras = ["all"], version = "^4.2.4"}
psycopg2-binary = "^2.9.7"
pillow = "^10.0.0"
scrapy = {extras = ["all"], version = "^2.10.0"}
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
